layout shift fix

--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -1,6 +1,11 @@
 /* stylelint-disable no-empty-source */
 /* stylelint-disable selector-class-pattern */
 
+.product-details-wrapper {
+  min-height: 700px;
+}
+
+
 .product-details__wrapper {
   display: grid;
   grid-template-columns: repeat(var(--grid-1-columns), 1fr);
