--- a/blocks/recommended-products/recommended-products.css
+++ b/blocks/recommended-products/recommended-products.css
@@ -1,3 +1,7 @@
+.recommended-products-wrapper {
+  min-height: 400px;
+}
+
 .section.recommended-products-container {
   margin: 4rem 0;
 }
